Fixed overflow display

--- a/style.css
+++ b/style.css
@@ -85,7 +85,9 @@ justify-content: flex-end;
 align-items: center;
 font-size: 2.5em;
 font-weight: 600;
-padding-right: 5px;
+padding-left: 5px;
+overflow: hidden ;
+direction: rtl;
 }
 
 #buttons {
